--- a/_layouts/fact.html
+++ b/_layouts/fact.html
@@ -35,6 +35,7 @@ layout: default
           <blockquote>
 
             <p2 id="newFactSection"></p2>
+            <img id="newImageSection" alt="" class ="center" src="" />
             <span style="display:block; height: 30px;"></span>
             <cite  id="newAuthorSection"></cite>
             <span style="display:block; height: 30px;"></span>
